--- a/yawordle/Assets/_Yawordle/Scripts/Presentation/Yawordle.Presentation.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/Presentation/Yawordle.Presentation.asmdef
@@ -5,7 +5,9 @@
         "GUID:eb6b4f14a35e048d591f2175b274a6de",
         "GUID:2bafac87e7f4b9b418d9448d219b01ab",
         "GUID:c2bea8d01f4d478e8bb971789f3ad933",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:80ecb87cae9c44d19824e70ea7229748"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
