feat(settings): Implement settings panel and word provider
This commit introduces a complete settings system and a dynamic word provider, enabling variable word length and multi-language support.

- Adds a settings panel UI with controls for language and word length.
- Implements a  to manage settings state and game restarts.
- Introduces a  to load dictionaries from text files.
- Adds dictionary files for EN/PL (lengths 4, 5, 6) in the Resources folder.
- Integrates new services into the DI container and core game loop.

fix(persistence): Correct settings persistence on game restart

- Replaced the built-in  with  to resolve a critical serialization bug with class properties.
- Refactored save operations to be fully asynchronous using , ensuring data integrity and preventing race conditions during scene reloads.

--- a/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
@@ -2,7 +2,10 @@
     "name": "Yawordle.Infrastructure",
     "rootNamespace": "Yawordle.Infrastructure",
     "references": [
-        "GUID:eb6b4f14a35e048d591f2175b274a6de"
+        "GUID:eb6b4f14a35e048d591f2175b274a6de",
+        "GUID:facd7b3fbff253e06a44748b8f4ae19a",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
