--- a/yawordle/Assets/_Yawordle/Scripts/DI/Yawordle.DI.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/DI/Yawordle.DI.asmdef
@@ -5,7 +5,8 @@
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:eb6b4f14a35e048d591f2175b274a6de",
         "GUID:e332607943c2d2f87b833aac9fab477a",
-        "GUID:9f640cd22ac0ce52faab57c9007f87ae"
+        "GUID:9f640cd22ac0ce52faab57c9007f87ae",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
