--- a/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
@@ -5,7 +5,10 @@
         "GUID:eb6b4f14a35e048d591f2175b274a6de",
         "GUID:facd7b3fbff253e06a44748b8f4ae19a",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:fe25561d224ed4743af4c60938a59d0b",
+        "GUID:5540e30183c82e84b954c033c388e06c",
+        "GUID:f220a277eefae4d3aa9e31c2b43bb307"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
