feat(ui): Implement responsive layout and safe area handling
- Redesigned the main screen layout to be fully responsive in portrait mode, ensuring a consistent and visually polished experience across a wide range of device sizes and aspect ratios.
- Implemented a robust 3-section vertical layout (Header, Game Area, Keyboard) using Flexbox.
- Redesigned the on-screen keyboard for better ergonomics and aesthetics.
- Replaced text-based header buttons with scalable icon assets.
- Integrated the Bitbebop.SafeArea library to automatically handle screen cutouts and safe areas on both iOS and Android, replacing manual C# logic.
- The UI now correctly adapts to devices with notches, punch-hole cameras, and rounded corners.

--- a/yawordle/Assets/_Yawordle/UI/Yawordle.UI.asmdef
+++ b/yawordle/Assets/_Yawordle/UI/Yawordle.UI.asmdef
@@ -1,3 +1,16 @@
 {
-  "name": "Yawordle.UI"
+    "name": "Yawordle.UI",
+    "rootNamespace": "",
+    "references": [
+        "GUID:718294127ab71459bb02258a6fe311da"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
