--- a/yawordle/Assets/_Yawordle/Scripts/Presentation/Yawordle.Presentation.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/Presentation/Yawordle.Presentation.asmdef
@@ -8,7 +8,8 @@
         "GUID:c2bea8d01f4d478e8bb971789f3ad933",
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:80ecb87cae9c44d19824e70ea7229748"
+        "GUID:80ecb87cae9c44d19824e70ea7229748",
+        "GUID:718294127ab71459bb02258a6fe311da"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
