--- a/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
+++ b/yawordle/Assets/_Yawordle/Scripts/Infrastructure/Yawordle.Infrastructure.asmdef
@@ -8,7 +8,9 @@
         "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
         "GUID:fe25561d224ed4743af4c60938a59d0b",
         "GUID:5540e30183c82e84b954c033c388e06c",
-        "GUID:f220a277eefae4d3aa9e31c2b43bb307"
+        "GUID:f220a277eefae4d3aa9e31c2b43bb307",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
